--- a/website/_css/page.pcss
+++ b/website/_css/page.pcss
@@ -15,6 +15,7 @@
   grid-template-rows: min-content 1fr auto;
 
   @media (--screen-pc) {
+    padding-bottom: 0;
     grid-template-areas:
       "header header"
       "content footer";
@@ -29,6 +30,10 @@
 
 .page__content {
   grid-area: content;
+
+  @media (--screen-pc) {
+    padding-bottom: calc(1rem + 1vw);
+  }
 }
 
 .page__footer {
